kubernetes/apps/fitness/sparkyfitness/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparkyfitness
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - fitness.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: sparkyfitness-frontend
          port: 8080
